@@ -1,3 +1,8 @@
+2007-06-25  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* config/tc-i386.c (process_operands): Replace regKludge
+	with RegKludge.
+
 2007-06-25  Richard Sandiford  <richard@codesourcery.com>
 
 	* config/tc-mips.h (TC_SYMFIELD_TYPE): New.
